--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,35 @@ button:hover {
 .icon-button:focus {
     outline: none;
 }
+
+
+.scrolling-header {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.scrolling-text {
+    font-size: 24px;
+    margin-bottom: 10px;
+    animation: scroll-left 10s linear infinite;
+}
+
+.scrolling-text:nth-child(2) {
+    animation-delay: 2s;
+}
+
+.scrolling-text:nth-child(3) {
+    animation-delay: 4s;
+}
+
+@keyframes scroll-left {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
