--- a/styles.css
+++ b/styles.css
@@ -230,3 +230,20 @@ button:hover {
 .content-section.active {
     display: block;
 }
+
+
+
+.picture-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 5px;
+    width: 300px; /* Adjust the width as needed */
+    height: 300px; /* Adjust the height as needed */
+}
+
+.picture-grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
